--- a/style/style.css
+++ b/style/style.css
@@ -118,3 +118,175 @@ html[xmlns] .clearfix {
 #wrapper section {
 	text-align: center;
 }
+
+/* Content */
+#content-wrapper, #wraper {
+	height: 100%;
+}
+
+#wraper .scrollContent, #wraper.horizontal .scrollContent {
+	height: 100%;
+}
+
+#section-slides, #section-wipes {
+	text-align: center;
+	height: 100%;
+    width: 100%;
+    -background-image: none;
+}
+
+#section-wipes b{
+	font-size: 15px;
+	color: black;
+	position: relative;
+	display: block;
+	height: 0;
+	overflow: visible;
+	top: 25%;
+}
+
+.shadow {
+	-webkit-box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.3);
+	-moz-box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.3);
+	box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.3);
+}
+.shadow-3px {
+	-webkit-filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.3));
+		filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.3));
+}
+.img-shadow {
+	-webkit-filter: drop-shadow(6px 6px 6px #222);
+		filter: drop-shadow(6px 6px 6px #222);
+}
+
+.navi_0 span a{
+	text-decoration:none;
+}
+
+.FL {
+	left:130px;
+}
+
+.FR {
+	right: 130px;
+}
+
+.F_IMG {
+	position: absolute; 
+	width: 100%; 
+	height: 100vh; 
+	background-size: cover;
+}
+
+.panel {
+	height: 100%;
+	width: 100%;
+}
+
+.B {
+	position: absolute; 
+	color: #fff; 
+	width: 450px; 
+	left: calc(50% - 225px); 
+	top: 50%; transform:translateY(-50%);
+	font-size: 18px;
+	line-height: 30px;
+	letter-spacing: 0.2em;
+	text-align: center;
+}
+
+.BG {
+	position:absolute; 
+	width: 100%; 
+	height: 100vh; 
+	background-size: cover; 
+	background-position: center center;
+}
+
+.BG_W {
+	position: absolute; 
+	width: 100%; 
+	height: 100%; 
+	background-color: #fff;
+}
+
+.dialogue {
+	top: 110vh;
+	position: fixed; 
+	width: 410px; 
+	padding: 30px;
+	padding-right: 5px;
+	background-color: #fdfffa;
+	z-index: 2;
+}
+
+.dialogue p{
+	color: #6d6e71;
+	margin: 0px;
+	font-size: 18px;
+	line-height: 30px;
+	letter-spacing: 0.2em;
+	text-align: left;
+}
+
+.fold {
+	position: absolute;
+	bottom: 25px;
+	right: -25px;
+	width: 25px;
+	height: calc(100% - 25px);
+	background-color: inherit;
+}
+.fold::before {
+	content: "";
+	position: absolute;
+	bottom: -25px;
+	right:0px;
+	border-bottom: 25px solid transparent;
+	border-left: 25px solid #d1d3d4;
+}
+
+svg text{
+  font-size: 14px;
+  font-family: sans-serif;
+  letter-spacing: 0.2em;
+  color: #595757;
+  text-anchor: middle;
+}
+
+svg {
+  transform: scale(0.8);
+}
+
+.home_0 a {
+	color: #fff;
+	text-decoration: none;
+}
+
+.navi_0 a{
+	color: #000;
+}
+
+.video-wrapper {
+	height: 100%;
+	text-align: center;
+	overflow: hidden;
+}
+
+.video-wrapper video {
+	object-fit: cover;
+}
+
+.imgs img {
+	margin-top:30px;
+}
+
+.panorama {
+	margin: 0 auto;
+	cursor: ew-resize;
+	width: 100%;
+	background-size: cover;
+	background-position: 50% 0;
+	z-index: 3;
+	transition: background-position 0.1s linear;
+}
